--- a/.github/workflows/main_flashhy-web-app.yml
+++ b/.github/workflows/main_flashhy-web-app.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy Node.js app to Azure Web App - Flashhy-web-app
+name: Build and deploy Static Website to Azure Web App - Flashhy-web-app
 
 on:
   push:
@@ -18,19 +18,13 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up Node.js version
-        uses: actions/setup-node@v3
-        with:
-          node-version: '22.x'
-
-      - name: npm install, build, and test
+      - name: Prepare static files for deployment
         run: |
-          npm install
-          npm run build --if-present
-          npm run test --if-present
-
+          echo "Preparing static HTML/CSS/JS files for deployment"
+          ls -la
+          
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+        run: zip release.zip index.html web.config
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
