--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "scripts": {
     "start": "node server.js"
   },
+  "engines": {
+    "node": "22.0.0"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/HXMAN76/flashy.git"
